[package]
name = "push_server"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql" ] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["v4"] }
pulldown-cmark = "0.10.0"
anyhow = "1.0.79"
lazy_static = "1.4.0"
toml = "0.8.10"
dotenv = "0.15.0"

